--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 		<artifactId>spark-core</artifactId>
 		<version>2.9.3</version>
 	</dependency>
+	
+	<dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-template-thymeleaf</artifactId>
+            <version>2.7.1</version>
+        </dependency>
 
   </dependencies>
   
